<resources>
    <string name="app_name">Barber Booking Staff</string>
    <string name="facebook_app_id" translatable="false">533315877231595</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb533315877231595</string>
    <string name="google_maps_key">AIzaSyCmUOrRgR98qG_vK_8GmSDg7lG_I1jGBEQ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="service">Service</string>
    <string name="extra_item">Extra Item</string>
    <string name="no_picture">No Picture</string>
    <string name="picture">Picture</string>
    <string name="log_in_salon">Log In Salon</string>
    <string name="log_in_barber">Log In Barber</string>
    <string name="notifications">Notifications</string>
    <string name="search_a_salon">Search a salon</string>
    <string name="previous">Previous</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">e-mail</string>
    <string name="address">Address</string>
    <string name="change_password">Change password</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="staff_name">Staff Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update_staff">Update Staff</string>
    <string name="remove_staff">Remove Staff</string>
    <string name="staff_login">Staff Login</string>
    <string name="log_in">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="barber_name">Barber Name</string>
    <string name="add_barber">Add Barber</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="optional_description">(Optional) Description</string>
    <string name="salon_name">Salon Name</string>
    <string name="salon_address">Salon Address</string>
    <string name="optioinal_mobile">(Optioinal) Mobile</string>
    <string name="open_hour">Open hour</string>
    <string name="create_salon">Create Salon</string>
    <string name="salon_city">Salon city</string>
    <string name="service_price">Service Price</string>
    <string name="add_service">Add Service</string>
    <string name="add_staff">Add Staff</string>
    <string name="salon">Salon: </string>
    <string name="barber">Barber:</string>
    <string name="customer">Customer:</string>
    <string name="phone">Phone:</string>
    <string name="time">Time:</string>
    <string name="extra_services">Extra Services</string>
    <string name="extra_items">Extra Items</string>
    <string name="total_price">Total Price:</string>
    <string name="confirm">Confirm</string>
    <string name="city">City</string>
    <string name="please_wait">Please wait...</string>
    <string name="are_you_sure_to_exit">Are you sure want to exit</string>
    <string name="exit">Exit</string>
    <string name="notification_count">9+</string>
    <string name="new_salon">New Salon</string>
    <string name="can_not_get_location">Unable to get last location</string>
    <string name="add_location_success">Add Location Success</string>
    <string name="salon_">Salon</string>
    <string name="barber_">Barber</string>
    <string name="checkout">Checkout</string>
    <string name="can_not_upload_image">Can,t upload image please try again</string>
    <string name="file_not_found">File not found</string>
    <string name="select_Image">Select Image</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure_log_out">Are you sure want to Log Out</string>
    <string name="log_out">Log Out</string>
    <string name="staff_type_be_not_null">Staff Type must not be Null</string>
    <string name="staff_data">Staff Data</string>
    <string name="update_staff_success">Updated Staff success</string>
    <string name="this_user_not_exists">This User not exists Please try again</string>
    <string name="can_not_add_barber">You do not have permissions to add an staff</string>
    <string name="can_not_remove_barber">You do not have permissions to remove an staff</string>
    <string name="remove_staff_success">Removed Staff Success</string>
    <string name="select_barber_type">Please select your Barber Type</string>
    <string name="select_salon_type">Please select your salon type</string>
    <string name="admin">Admin</string>
    <string name="staff">Staff</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="both">Both</string>
    <string name="add_barber_success">Added barber success</string>
    <string name="add_product">Add Product</string>
    <string name="upload_product_success">Uploaded product success</string>
    <string name="add_shopping_success">Addedd to Shopping Success</string>
    <string name="loadding_product">Loading Product...</string>
    <string name="this_user_exists">This user exists</string>
    <string name="add_salon_success">Add Salon Success</string>
    <string name="add_service_success">Addedd Services Successfull</string>
    <string name="username_exists">User name exists Please try again</string>
    <string name="loading">Loading...</string>
    <string name="remove_product_success">Removed products Successfull</string>
    <string name="wrong_username_or_password">Wrong username and password or wrong salon</string>
    <string name="add_to_shopping">Added to menu shoping</string>
    <string name="available">Available</string>
    <string name="full">Full</string>
    <string name="done">Done</string>
    <string name="show_product">Show Product</string>
    <string name="add_services">Add Services</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="add_email_success">Add email successfully</string>
    <string name="verification">Verification</string>
    <string name="message_verification_email">Verification email sent to. Please check your email</string>
    <string name="email_pattern">You have entered an email incorrectly</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="please_enter_salon_name">Please enter salon name</string>
    <string name="please_enter_salon_city">Please enter city</string>
    <string name="please_enter_salon_address">Please enter address</string>
    <string name="please_enter_barber_name">Please enter barber name</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="password_must_be_at_least_6">Password must be at least 6 characters long</string>
    <string name="please_select_salon_type">Please select salon type</string>
    <string name="please_select_barber_type">Please select barber type</string>
    <string name="update_product">Update product</string>
    <string name="delete_product">Delete product</string>
    <string name="delete_product_success">Deleted product success</string>
    <string name="open_salon">Salon is opened</string>
    <string name="close_salon">Salon is closed</string>
    <string name="sucess">Successfully</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="are_sure_clear_notifications">Are you sure want to clear notifications</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish_booking">Finished Booking</string>
    <string name="thank_you_for_booking">Thank you for our booking</string>
    <string name="no_product">No products at the moment</string>
    <string name="no_notifications">No notifications at the moment</string>
    <string name="update_product_success">Updated product success</string>
    <string name="update_shopping_success">Updated shopping success</string>
    <string name="please_select_image">Please select image</string>
    <string name="website">Website or facebook page</string>
    <string name="add_website">Add website</string>
    <string name="update_name">Update name</string>
    <string name="update_salon_name">Update salon name</string>
    <string name="update_salon_name_success">Update salon name successfully</string>
    <string name="update_salon_phone">Update salon phone</string>
    <string name="salon_phone">Salon phone</string>
    <string name="update_salon_phone_success">Update salon phone successfylly</string>
    <string name="update_city_success">Update city success</string>
    <string name="update_salon_city">Update salon city</string>
    <string name="update_salon_address">Update salon address</string>
    <string name="update_salon_address_success">Update salon adddess success</string>
    <string name="please_enter_phone_number">Please enter mobile number</string>
    <string name="please_enter_code_phone_number">Please enter code mobile number</string>
    <string name="please_enter_website">Please enter website</string>
    <string name="confirmation">Confirmation</string>
    <string name="barber_type">Barber type</string>
    <string name="barber_avaliable">Barber is available</string>
    <string name="barber_busy">Barber is busy</string>
    <string name="update_barber_name">Update barber name</string>
    <string name="update_barber_name_success">Updated barber name successfully</string>
    <string name="update_barber_type">Update barber type</string>
    <string name="update_barber_type_success">Update barber type successfully</string>
    <string name="current_password">Current password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="new_password">New password</string>
    <string name="the_two_passwords_do_not_match">The two passwords do not match</string>
    <string name="change_password_success">Change password successfully</string>
    <string name="change_username">Change username</string>
    <string name="change_username_success">Change username successfully</string>
    <string name="current_password_incorect">Current password incorect</string>
    <string name="please_enter_re_type_password">Please enter re type password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_select_your_city">Please select your city</string>
    <string name="new_barber">New barber</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="add_new_barber">Create new barber</string>
    <string name="add_country_success">Add country success</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_your_name">please enter salon name</string>
    <string name="please_enter_city">Please enter salon city</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_out_from_salon">Exit Salon</string>
    <string name="log_out_from_barber">Log out Barber</string>
    <string name="ok">OK</string>
    <string name="update_email">Update email</string>
    <string name="update_email_success">Update email success</string>
    <string name="uploading">Uploading...</string>
    <string name="uploading_done">Uploading:</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="password_updated">Password updated</string>
    <string name="password_has_update">your password has been updated</string>
</resources>