<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_show_barber"
        android:icon="@drawable/ic_staff"
        android:title="@string/staff"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_show_product"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/products"
        app:showAsAction="always"/>


    <item
        android:id="@+id/nav_add_service"
        android:icon="@drawable/ic_add_service"
        android:title="@string/services"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        app:showAsAction="always"/>


    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always"/>

</menu>