<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin8">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Babrer"
        android:textSize="24sp"
        android:textColor="@color/colorButton"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/input_register_salon_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/salon_name"
        android:inputType="text"
        android:background="@drawable/input_bg"
        android:padding="@dimen/margin16"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_register"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/input_register_salon_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/salon_city"
        android:inputType="text"
        android:background="@drawable/input_bg"
        android:padding="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_register_salon_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/input_register_barber_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/barber_name"
        android:inputType="text"
        android:background="@drawable/input_bg"
        android:padding="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_register_salon_city"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/input_register_barber_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:background="@drawable/input_bg"
        android:padding="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_register_barber_name"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/input_register_barber_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/input_bg"
        android:padding="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_register_barber_username"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_barber_type_register"
        android:layout_width="@dimen/widthheight"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20"
        app:layout_constraintTop_toBottomOf="@id/input_register_barber_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_barber"
        android:background="@drawable/btn_bg_yallow"
        android:layout_marginTop="@dimen/margin30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_barber_type_register"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.syd.oden.circleprogressdialog.view.RotateLoading
        android:id="@+id/progress_register"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin16"
        app:loading_color="@color/colorPrimary"
        app:loading_width="6dp"
        app:shadow_offset="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />


</androidx.constraintlayout.widget.ConstraintLayout>