<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin10">

        <ImageView
            android:id="@+id/img_update_product"
            android:layout_width="@dimen/widthheight"
            android:layout_height="220dp"
            android:layout_margin="@dimen/margin8"
            android:scaleType="centerCrop"
            android:background="@drawable/select_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_update_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/input_bg"
            android:hint="@string/product_name"
            android:inputType="text"
            android:padding="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_update_product" />

        <EditText
            android:id="@+id/input_update_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/input_bg"
            android:hint="@string/price"
            android:inputType="number"
            android:padding="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_update_product_name" />


        <EditText
            android:id="@+id/input_update_product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/input_bg"
            android:hint="@string/optional_description"
            android:inputType="textLongMessage"
            android:padding="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_update_product_price" />

        <LinearLayout
            android:id="@+id/linear_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_update_product_description">

            <Button
                android:id="@+id/btn_cancel_update_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_update_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>