<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update_password_countainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin30"
    tools:context=".ui.login.barber.forgotPassword.UpdatePasswordSuccess">

    <ImageView
        android:id="@+id/btn_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_24"
        android:transitionName="transition_back_arrow"
        android:padding="@dimen/margin5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize40"
            android:textAllCaps="true"
            android:fontFamily="@font/arkhip_font"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="-80dp"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_margin="@dimen/margin20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_has_update"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize16"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_light"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin10"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/colorWhite"
            android:transitionName="transition_login"
            android:background="@drawable/btn_bg_black"
            android:layout_marginTop="@dimen/margin24"/>

    </LinearLayout>



</LinearLayout>